fixed mobile view overflow socials

--- a/src/style.css
+++ b/src/style.css
@@ -147,7 +147,12 @@ footer {
     align-self: center;
   }
   .socials {
+    padding: 0 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin-top: 20px;
+    overflow-y: hidden;
   }
   noscript > h1 {
     font-size: 36px;
